// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DidUpgradeExplainer should render DID already removed from chain 1`] = `
<div>
  <form
    class="container"
  >
    <h1
      class="heading"
    >
      Decentralized Identifier
    </h1>
    <p
      class="subline"
    >
      DID was deleted
    </p>
    <section
      class="container"
    >
      <div
        class="avatar"
      >
        Identicon
      </div>
      <div
        class="centeredNameLine"
      >
        <span
          class="name"
        >
          Identity with deleted on-chain DID
        </span>
      </div>
    </section>
    <p
      class="didLine"
    >
      <input
        aria-label="DID"
        class="long"
        readonly=""
        value="did:kilt:4tPoYT9j4i429JktnyX9EEu9StL58YfdPCi8cUkYnvtAKRbK"
      />
      <button
        aria-label="copy to clipboard"
        class="copy"
        title="copy to clipboard"
        type="button"
      />
    </p>
    <p
      class="deleted"
    >
      You deleted your DID and can no longer use this feature. To start using a DID, please create a new identity.
    </p>
    <a
      class="back"
      href="/"
    >
      Back
    </a>
    <div />
    <button
      aria-label="Back"
      class="linkBack"
      title="Back"
      type="button"
    />
    <p
      class="stats"
    >
      You have 3 Identities with a
      <span
        class="balance"
      >
         Total Balance: 
        <span
          class="amount"
        >
          3.7020
           
          <span
            aria-label="KILT Coin"
            class="coin"
          />
        </span>
      </span>
    </p>
  </form>
</div>
`;

exports[`DidUpgradeExplainer should render DID not on chain yet 1`] = `
<div>
  <form
    class="container"
  >
    <h1
      class="heading"
    >
      Decentralized Identifier
    </h1>
    <p
      class="subline"
    >
      Get your DID
    </p>
    <section
      class="container"
    >
      <div
        class="avatar"
      >
        Identicon
      </div>
      <div
        class="centeredNameLine"
      >
        <span
          class="name"
        >
          Light DID Identity
        </span>
      </div>
    </section>
    <div
      class="functionality"
    >
      <div
        class="avatar"
      >
        Identicon
      </div>
      A DID enables you to sign new transactions and use new functionality
    </div>
    <p
      class="deposit"
    >
      A deposit is needed to create your DID. The deposit will be refunded if you remove your DID.
    </p>
    <section
      class="paymentMethods"
    >
      <p
        class="paymentMethod"
      >
        <label
          class="kilt"
        >
          <input
            checked=""
            class="select"
            name="payment"
            type="radio"
            value="kilt"
          />
          Pay with KILT
        </label>
        <button
          aria-label="Pay with KILT information"
          class="show"
          type="button"
        />
        <output
          class="errorTooltip"
          hidden=""
        >
          You need at least 2.0000 KILTs (deposit + fee)
        </output>
      </p>
      <p
        class="paymentMethod"
      >
        <label
          class="euro"
        >
          <input
            class="select"
            name="payment"
            type="radio"
            value="euro"
          />
          Use Checkout Service and pay with Paypal EUR 1,20 (service fee, including VAT) or EUR equivalent, depending on your preferred PayPal currency
        </label>
        <button
          aria-label="Pay with Euro information"
          class="show"
          type="button"
        />
      </p>
    </section>
    <p
      class="buttonsLine"
    >
      <a
        class="cancel"
        href="/"
      >
        Cancel
      </a>
      <a
        aria-disabled="false"
        class="upgrade"
        href="/identity/4tDjyLy2gESkLzvaLnpbn7N61VgnwAhqnTHsPPFAwaZjGwP1/did/upgrade/kilt"
      >
        Continue
      </a>
    </p>
    <div />
    <button
      aria-label="Back"
      class="linkBack"
      title="Back"
      type="button"
    />
    <p
      class="stats"
    >
      You have 3 Identities with a
      <span
        class="balance"
      >
         Total Balance: 
        <span
          class="amount"
        >
          3.7020
           
          <span
            aria-label="KILT Coin"
            class="coin"
          />
        </span>
      </span>
    </p>
  </form>
</div>
`;

exports[`DidUpgradeExplainer should render pay with euro option in internal build 1`] = `
<div>
  <form
    class="container"
  >
    <h1
      class="heading"
    >
      Decentralized Identifier
    </h1>
    <p
      class="subline"
    >
      Get your DID
    </p>
    <section
      class="container"
    >
      <div
        class="avatar"
      >
        Identicon
      </div>
      <div
        class="centeredNameLine"
      >
        <span
          class="name"
        >
          Light DID Identity
        </span>
      </div>
    </section>
    <div
      class="functionality"
    >
      <div
        class="avatar"
      >
        Identicon
      </div>
      A DID enables you to sign new transactions and use new functionality
    </div>
    <p
      class="deposit"
    >
      A deposit is needed to create your DID. The deposit will be refunded if you remove your DID.
    </p>
    <section
      class="paymentMethods"
    >
      <p
        class="paymentMethod"
      >
        <label
          class="kilt"
        >
          <input
            checked=""
            class="select"
            name="payment"
            type="radio"
            value="kilt"
          />
          Pay with KILT
        </label>
        <button
          aria-label="Pay with KILT information"
          class="show"
          type="button"
        />
        <output
          class="errorTooltip"
          hidden=""
        >
          You need at least 2.0000 KILTs (deposit + fee)
        </output>
      </p>
      <p
        class="paymentMethod"
      >
        <label
          class="euro"
        >
          <input
            class="select"
            name="payment"
            type="radio"
            value="euro"
          />
          Use Checkout Service and pay with Paypal EUR 1,20 (service fee, including VAT) or EUR equivalent, depending on your preferred PayPal currency
        </label>
        <button
          aria-label="Pay with Euro information"
          class="show"
          type="button"
        />
      </p>
    </section>
    <p
      class="buttonsLine"
    >
      <a
        class="cancel"
        href="/"
      >
        Cancel
      </a>
      <a
        aria-disabled="false"
        class="upgrade"
        href="/identity/4tDjyLy2gESkLzvaLnpbn7N61VgnwAhqnTHsPPFAwaZjGwP1/did/upgrade/kilt"
      >
        Continue
      </a>
    </p>
    <div />
    <button
      aria-label="Back"
      class="linkBack"
      title="Back"
      type="button"
    />
    <p
      class="stats"
    >
      You have 3 Identities with a
      <span
        class="balance"
      >
         Total Balance: 
        <span
          class="amount"
        >
          3.7020
           
          <span
            aria-label="KILT Coin"
            class="coin"
          />
        </span>
      </span>
    </p>
  </form>
</div>
`;

exports[`should render insufficient balance to pay costs in KILT 1`] = `
<div>
  <form
    class="container"
  >
    <h1
      class="heading"
    >
      Decentralized Identifier
    </h1>
    <p
      class="subline"
    >
      Get your DID
    </p>
    <section
      class="container"
    >
      <div
        class="avatar"
      >
        Identicon
      </div>
      <div
        class="centeredNameLine"
      >
        <span
          class="name"
        >
          Light DID Identity
        </span>
      </div>
    </section>
    <div
      class="functionality"
    >
      <div
        class="avatar"
      >
        Identicon
      </div>
      A DID enables you to sign new transactions and use new functionality
    </div>
    <p
      class="deposit"
    >
      A deposit is needed to create your DID. The deposit will be refunded if you remove your DID.
    </p>
    <section
      class="paymentMethodsError"
    >
      <p
        class="paymentMethod"
      >
        <label
          class="insufficientKilt"
        >
          <input
            checked=""
            class="select"
            disabled=""
            name="payment"
            type="radio"
            value="kilt"
          />
          Pay with KILT
        </label>
        <button
          aria-label="Pay with KILT information"
          class="show"
          type="button"
        />
        <output
          class="errorTooltip"
        >
          You need at least 2.0000 KILTs (deposit + fee)
        </output>
      </p>
      <p
        class="paymentMethod"
      >
        <label
          class="euro"
        >
          <input
            class="select"
            name="payment"
            type="radio"
            value="euro"
          />
          Use Checkout Service and pay with Paypal EUR 1,20 (service fee, including VAT) or EUR equivalent, depending on your preferred PayPal currency
        </label>
        <button
          aria-label="Pay with Euro information"
          class="show"
          type="button"
        />
      </p>
    </section>
    <p
      class="buttonsLine"
    >
      <a
        class="cancel"
        href="/"
      >
        Cancel
      </a>
      <a
        aria-disabled="false"
        class="upgrade"
        href="/identity/4tDjyLy2gESkLzvaLnpbn7N61VgnwAhqnTHsPPFAwaZjGwP1/did/upgrade/euro"
      >
        Continue
      </a>
    </p>
    <div />
    <button
      aria-label="Back"
      class="linkBack"
      title="Back"
      type="button"
    />
    <p
      class="stats"
    >
      You have 3 Identities with a
      <span
        class="balance"
      >
         Total Balance: 
        <span
          class="amount"
        >
          3.7020
           
          <span
            aria-label="KILT Coin"
            class="coin"
          />
        </span>
      </span>
    </p>
  </form>
</div>
`;
